--- a/Fraud_detection.ipynb
+++ b/Fraud_detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONLb8C2HVUC498jlxXGRfS",
+      "authorship_tag": "ABX9TyM7IVzrE3Q2dl/OCvuabhn9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/sohamhmhm/CodeClauseint/blob/main/Fraud_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "THIS IS THE FIRST PROJECT - #CC69844 CREDIT CARD FRAUD DETECTION"
+      ],
+      "metadata": {
+        "id": "Je55BobIsNDP"
+      }
     },
     {
       "cell_type": "code",
