#2 PROJECT - Credit Card Fraud Detection Using Advanced ML techniques

--- a/Fraud_detection_using_Adv_ML.ipynb
+++ b/Fraud_detection_using_Adv_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEisCzs+bsD7aWKx1pK8rJ",
+      "authorship_tag": "ABX9TyPox7JX4ldu3EhNIC7ddU+P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1241,6 +1241,30 @@
     {
       "cell_type": "code",
       "source": [
+        "X_train_prediction = model.predict(X_train)\n",
+        "training_data_accuracy = accuracy_score(X_train_prediction, y_train)"
+      ],
+      "metadata": {
+        "id": "ZIB6_cK--Rlz"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test_prediction = model.predict(X_test)\n",
+        "test_data_accuracy = accuracy_score(X_test_prediction, y_test)"
+      ],
+      "metadata": {
+        "id": "8nj5hz4P-VJ0"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "if pred == 0:\n",
         "    print(\"Normal Transcation\")\n",
         "else:\n",
@@ -1251,9 +1275,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SNE9O7dF2lGd",
-        "outputId": "2333d267-aa6a-4e4c-877d-d8107cfde866"
+        "outputId": "753a2c5a-0270-49e7-b4c6-1833913e497d"
       },
-      "execution_count": 61,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -1266,21 +1290,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print('Accuracy score on Train Data : ', training_data_accuracy)"
+      ],
       "metadata": {
-        "id": "zBCpGnju2lJz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zBCpGnju2lJz",
+        "outputId": "86bf40c3-b4f0-4be8-f71b-a27dff873513"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy score on Train Data :  1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print('Accuracy score on Test Data : ', test_data_accuracy)"
+      ],
       "metadata": {
-        "id": "KWwSjbba2lNP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KWwSjbba2lNP",
+        "outputId": "a166cf78-fb90-4d79-cf03-85143514cb3b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy score on Test Data :  1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
